--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Jakarta
-APP_URL=http://localhost
+APP_URL=https://localhost
+FORCE_HTTPS=true
 
 APP_LOCALE=id
 APP_FALLBACK_LOCALE=id
